--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -251,6 +251,32 @@
   timestamp = {2019.03.13},
 }
 
+@InCollection{Akaike1974,
+  author    = {Akaike, H.},
+  title     = {A New Look at the Statistical Model Identification},
+  booktitle = {Selected Papers of Hirotugu Akaike},
+  publisher = {Springer},
+  year      = {1974},
+  series    = {Springer Series in Statistics},
+  pages     = {215-222},
+  doi       = {10.1007/978-1-4612-1694-0_16},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
+@Article{Akaike1974a,
+  author    = {Akaike, H.},
+  title     = {A new look at the statistical model identification},
+  journal   = {IEEE Transactions on Automatic Control},
+  year      = {1974},
+  volume    = {19},
+  number    = {6},
+  pages     = {716-723},
+  doi       = {10.1109/tac.1974.1100705},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
 @Article{Alberich2002,
   author    = {Alberich, R. and Miro-Julia, J. and Rossello, F.},
   title     = {{Marvel Universe} looks almost like a real social network},
@@ -679,6 +705,16 @@
   owner     = {Vincent},
   timestamp = {2011.11.24},
   url       = {http://arxiv.org/abs/1111.4570},
+}
+
+@Book{Baer2012,
+  title     = {Ossian and National Epic},
+  publisher = {Peter Lang},
+  year      = {2012},
+  author    = {Bär, G. and Gaskill, H.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.peterlang.com/view/title/15356},
 }
 
 @Article{Baiesi2004,
@@ -1681,6 +1717,16 @@
   timestamp = {2019.03.29},
 }
 
+@Book{Brooke1816,
+  title     = {Reliques of Irish Poetry: Consisting of Heroic Poems, Odes, Elegies, and Songs, Translated Into English Verse, With Notes Explanatory and Historical, and the Originals in the Irish Character, to which is Subjoined an Irish Tale},
+  publisher = {J. Christie},
+  year      = {1816},
+  author    = {Brooke, C.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://archive.org/details/reliquesofirishp02broo},
+}
+
 @Book{Buchanan2003,
   title     = {Nexus: Small Worlds and the Groundbreaking Theory of Networks},
   publisher = {Norton},
@@ -1733,6 +1779,26 @@
   doi       = {10.1109/tvcg.2011.226},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Book{Burnett2011,
+  title     = {Blind Ossian’s Fingal: Fragments and Controversy},
+  publisher = {Luath Press},
+  year      = {2011},
+  author    = {Burnett, A. and Anderson, L.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.luath.co.uk/poetry/blind-ossians-fingal-fragments-and-controversy},
+}
+
+@Book{Burnham2004,
+  title     = {Model Selection and Multimodel Inference: A Practical Information-Theoretic Approach},
+  publisher = {Springer},
+  year      = {2004},
+  author    = {Burnham, K. P. and Anderson, D. R.},
+  doi       = {10.1007/b97636},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
 }
 
 @Article{Burrows1987,
@@ -2387,6 +2453,29 @@
   timestamp = {2015.02.19},
 }
 
+@Article{Conover1972,
+  author    = {Conover, W. J.},
+  title     = {A Kolmogorov Goodness-of-Fit Test for Discontinuous Distributions},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1972},
+  volume    = {67},
+  number    = {339},
+  pages     = {591-596},
+  doi       = {10.2307/2284444},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
+@Book{Conover1980,
+  title     = {Practical Nonparametric Statistics},
+  publisher = {Wiley},
+  year      = {1980},
+  author    = {Conover, W. J.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.wiley.com/en-ag/Practical+Nonparametric+Statistics,+3rd+Edition-p-9780471160687},
+}
+
 @InProceedings{Consolvo2005,
   author    = {Consolvo, S. and Smith, I. E. and Matthews, T. and LaMarca, A. and Tabert, J. and Powledge, P.},
   title     = {Location disclosure to social relations: why, when, \& what people want to share},
@@ -2480,6 +2569,16 @@
   url       = {https://books.google.fr/books/about/The_world_of_Geoffrey_Keating.html?id=JpNnAAAAMAAJ&redir_esc=y},
 }
 
+@Book{Curley2009,
+  title     = {Samuel Johnson, the Ossian Fraud, and the Celtic Revival in Great Britain and Ireland},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  author    = {Curley, T. M.},
+  doi       = {10.1017/cbo9780511576461},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
 @TechReport{Dahn2015,
   author      = {Dahn, T.},
   title       = {Development of a (Semi-) Automatic Character Network Tool},
@@ -2566,6 +2665,16 @@
   groups    = {General},
   owner     = {Vincent},
   timestamp = {2018.10.27},
+}
+
+@Book{Daniel1990,
+  title     = {Applied Nonparametric Statistics},
+  publisher = {PWS-Kent},
+  year      = {1990},
+  author    = {Daniel, W. W.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://books.google.fr/books/about/Applied_nonparametric_statistics.html?id=0hPvAAAAMAAJ&redir_esc=y},
 }
 
 @InProceedings{Danisman2008,
@@ -3439,6 +3548,16 @@
   timestamp = {2019.04.03},
 }
 
+@Book{Fielding1996,
+  title     = {Writing and Orality: Nationality, Culture, and Nineteenth-Century Scottish Fiction},
+  publisher = {Oxford University Press},
+  year      = {1996},
+  author    = {Fielding, P.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {http://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780198121800.001.0001/acprof-9780198121800},
+}
+
 @InProceedings{Finkel2005,
   author    = {Finkel, J. R. and Grenager, T. and Manning, C.},
   title     = {Incorporating non-local information into information extraction systems by Gibbs sampling},
@@ -3660,6 +3779,18 @@
   timestamp = {2016.01.05},
 }
 
+@Article{Fronczak2004,
+  author    = {Fronczak, A. and Fronczak, P. and Hołyst, J. A.},
+  title     = {Average path length in random networks},
+  journal   = {Physical Review E},
+  year      = {2004},
+  volume    = {70},
+  number    = {5},
+  doi       = {10.1103/physreve.70.056110},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
 @Book{Frow2014,
   title     = {Character and Person},
   publisher = {Oxford University Press},
@@ -3824,6 +3955,48 @@
   doi       = {10.1023/a:1018981505752},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Book{Gaskill1991,
+  title     = {Ossian Revisited},
+  publisher = {University of Edinburgh Press},
+  year      = {1991},
+  author    = {Gaskill, H.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://books.google.fr/books/about/Ossian_Revisited.html?id=1OLWAAAAMAAJ&redir_esc=y},
+}
+
+@Book{Gaskill1996,
+  title     = {The Poems of Ossian and Related Works},
+  publisher = {Edinburgh University Press},
+  year      = {1996},
+  author    = {Gaskill, H.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://global.oup.com/academic/product/?cc=fr&lang=en&},
+}
+
+@Book{Gaskill2004,
+  title     = {The Reception of Ossian in Europe},
+  publisher = {Thoemmes Continuum},
+  year      = {2004},
+  author    = {Gaskill, H.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.bloomsbury.com/uk/the-reception-of-ossian-in-europe-9781847143013/},
+}
+
+@Article{Gaskill2007,
+  author    = {Gaskill, H.},
+  title     = {The Homer of the North},
+  journal   = {Interfaces},
+  year      = {2007},
+  volume    = {27},
+  pages     = {13-24},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://college.holycross.edu/interfaces/vol27/gaskill_essay.pdf},
 }
 
 @InProceedings{Ge2009,
@@ -4031,6 +4204,16 @@
   doi       = {10.1017/cbo9780511499579.002},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Book{Golden2002,
+  title     = {Thomas Jefferson and the Rhetoric of Virtue},
+  publisher = {Rowman and Littlefield},
+  year      = {2002},
+  author    = {Golden, J. L. and Golden, A. L.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://books.google.fr/books/about/Thomas_Jefferson_and_the_Rhetoric_of_Vir.html?id=0_P7VTCiGv4C&redir_esc=y},
 }
 
 @Article{Goldstein2004,
@@ -4917,6 +5100,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
+@Article{Ipsen2002,
+  author    = {Ipsen, M. and Mikhailov, A. S.},
+  title     = {Evolutionary reconstruction of networks},
+  journal   = {Physical Review E},
+  year      = {2002},
+  volume    = {66},
+  number    = {4},
+  doi       = {10.1103/physreve.66.046109},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
 @Article{Irie2010,
   author    = {Irie, G. and Satou, T. and Kojima, A. and Yamasaki, T. and Aizawa, K.},
   title     = {Affective Audio-Visual Words and Latent Topic Driving Model for Realizing Movie Affective Scene Classification},
@@ -5093,6 +5288,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/10.5406/j.ctt2jcc3m},
 }
 
+@Article{Johnson2016,
+  author    = {Johnson, A. L.},
+  title     = {Thomas Jefferson's Ossianic Romance},
+  journal   = {Studies in Eighteenth-Century Culture},
+  year      = {2016},
+  volume    = {45},
+  number    = {1},
+  pages     = {19-35},
+  doi       = {10.1353/sec.2016.0006},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
 @Article{Jovanovic2014,
   author    = {Jovanovic, J. and Bagheri, E. and Cuzzola, J. and Gasevic, D. and Jeremic, Z. and Bashash, R.},
   title     = {Automated semantic tagging of textual content},
@@ -5224,6 +5432,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Jurman2011,
+  author    = {Jurman, G. and Riccadonna, S. and Visintainer, R. and Furlanello, C.},
+  title     = {Biological network comparison via Ipsen-Mikhailov distance},
+  journal   = {arXiv},
+  year      = {2011},
+  volume    = {q-bio.MN},
+  pages     = {1109.0220},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://arxiv.org/abs/1109.0220},
+}
+
 @InProceedings{Karlgren1994,
   author    = {Karlgren, J. and Cutting, D.},
   title     = {Recognizing text genres with simple metrics using discriminant analysis},
@@ -5342,6 +5562,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Raw Data},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Book{Kidd1993,
+  title     = {Subverting Scotland's Past: Scottish Whig Historians and the Creation of an Anglo-British Identity 1689-1830},
+  publisher = {Cambridge University Press},
+  year      = {1993},
+  author    = {Kidd, C.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.cambridge.org/core/books/subverting-scotlands-past/3A5162B47490EA6DD81F900D6FD05833},
 }
 
 @InProceedings{Kierkels2009,
@@ -6497,6 +6727,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.johnsbookshop.com/products/navan-fort-archaeology-and-myth-armagh/},
 }
 
+@Article{Lyons2007,
+  author    = {Lyons, C. E.},
+  title     = {Sylvester O'Halloran: Miso-Dolos},
+  journal   = {Journal of the Galway Archaeological and Historical Society},
+  year      = {2007},
+  volume    = {59},
+  pages     = {46-58},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://aran.library.nuigalway.ie/bitstream/handle/10379/2994/galway%20ant.%20journal.pdf?sequence=1},
+}
+
 @InProceedings{Ma2005,
   author    = {Ma, C. and Prendinger, H. and Ishizuka, M.},
   title     = {Emotion Estimation and Reasoning Based on Affective Textual Interaction},
@@ -6954,6 +7196,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2019.02.20},
 }
 
+@Book{McNeil2007,
+  title     = {Scotland, Britain, Empire: Writing the Highlands, 1760-1860},
+  publisher = {Ohio State University Press},
+  year      = {2007},
+  author    = {McNeil, K.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {http://onlinebooks.library.upenn.edu/webbin/book/lookupid?key=olbp68043},
+}
+
+@InCollection{Meek1991,
+  author    = {Meek, D. E.},
+  title     = {The Gaelic ballads of Scotland: Creativity and adaptation},
+  booktitle = {Ossian Revisited},
+  publisher = {University of Edinburgh Press},
+  year      = {1991},
+  pages     = {19-48},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.jstor.org/stable/20522424},
+}
+
 @InProceedings{Mei2007,
   author    = {Mei, T. and Hua, X.-S. and Yang, L. and Li, S.},
   title     = {{VideoSense}: towards effective online video advertising},
@@ -7096,6 +7360,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2011.07.19},
 }
 
+@Article{Mitchell2016,
+  author    = {Mitchell, S.},
+  title     = {Ossian in the Twenty-First Century},
+  journal   = {British journal for eighteenth-century studies},
+  year      = {2016},
+  volume    = {39},
+  number    = {2},
+  pages     = {159-250},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.birmingham.ac.uk/staff/profiles/english/mitchell-sebastian.aspx},
+}
+
+@Article{Mitchell2016a,
+  author    = {Mitchell, S.},
+  title     = {Introduction Ossian: Past, Present and Future},
+  journal   = {Journal for Eighteenth-Century Studies},
+  year      = {2016},
+  volume    = {39},
+  number    = {2},
+  pages     = {159-170},
+  doi       = {10.1111/1754-0208.12395},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
 @Article{Moattar2012,
   author    = {Moattar, M. H. and Homayounpour, M. M.},
   title     = {A review on speaker diarization systems and approaches},
@@ -7180,6 +7470,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1086/421509},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Moore2000,
+  author    = {Moore, D.},
+  title     = {Heroic Incoherence in James Macpherson's The Poems of Ossian},
+  journal   = {Eighteenth-Century Studies},
+  year      = {2000},
+  volume    = {34},
+  number    = {1},
+  pages     = {43-59},
+  doi       = {10.1353/ecs.2000.0062},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+}
+
+@Book{Moore2004,
+  title     = {Ossian and Ossianism},
+  publisher = {Taylor and Francis},
+  year      = {2004},
+  author    = {Moore, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://books.google.fr/books/about/Ossian_and_Ossianism_The_poems_of_Ossian.html?id=dRXgYkQoHDIC&redir_esc=y},
 }
 
 @Book{Moretti1987,
@@ -7360,6 +7673,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2018.02.15},
+}
+
+@Article{Mulholland2009,
+  author    = {Mulholland, J.},
+  title     = {James Macpherson's Ossian Poems, Oral Traditions, and the Invention of Voice},
+  journal   = {Oral Tradition},
+  year      = {2009},
+  volume    = {24},
+  number    = {2},
+  pages     = {393-414},
+  doi       = {10.1353/ort.0.0040},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
 }
 
 @Electronic{Munroe2009,
@@ -8063,6 +8389,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1803.08670},
 }
 
+@Article{OHalloran1989,
+  author    = {O'Halloran, C.},
+  title     = {Irish re-creations of the Gaelic past: The challenge of Macpherson's Ossian},
+  journal   = {Past Present},
+  year      = {1989},
+  volume    = {124},
+  pages     = {69-95},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.jstor.org/stable/650893},
+}
+
 @Article{Ojala1996,
   author    = {Ojala, T. and Pietikäinen, M. and Harwood, D.},
   title     = {A comparative study of texture measures with classification based on featured distributions},
@@ -8676,6 +9014,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/3-540-44541-2_19},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Book{Quint1993,
+  title     = {Epic and Empire: Politics and Generic Form from Virgil to Milton},
+  publisher = {Princeton University Press},
+  year      = {1993},
+  author    = {Quint, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://press.princeton.edu/titles/5211.html},
 }
 
 @InProceedings{Rasheed2002,
@@ -9884,6 +10232,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewPaper/12173},
 }
 
+@InCollection{Stafford1991,
+  author    = {Stafford, F. J.},
+  title     = {'Dangerous Success': Ossian, Wordsworth, and English Romantic Literature},
+  booktitle = {Ossian Revisited},
+  publisher = {University of Edinburgh Press},
+  year      = {1991},
+  pages     = {49-72},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.jstor.org/stable/20522424},
+}
+
+@InCollection{Stafford1996,
+  author    = {Stafford, F.},
+  title     = {Introduction: The Ossianic poems of James Macpherson},
+  booktitle = {The Poems of Ossian and Related Works},
+  publisher = {Edinburgh University Press},
+  year      = {1996},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://trove.nla.gov.au/work/22034492?q&versionId=44735493},
+}
+
 @InProceedings{Stamatatos2000,
   author    = {Stamatatos, E. and Fakotakis, N. and Kokkinakis, G.},
   title     = {Text genre detection using common word frequencies},
@@ -10376,6 +10747,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1651461.1651476},
   owner     = {Vincent},
   timestamp = {2019.03.29},
+}
+
+@Book{Thomson1952,
+  title     = {The Gaelic Sources of Macpherson's Ossian},
+  publisher = {Oliver \& Boyd},
+  year      = {1952},
+  author    = {Thomson, D. S.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.vanhamel.nl/codecs/Thomson_(D._S.)_1952a},
 }
 
 @InProceedings{Titov2008,
@@ -11334,6 +11715,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2016.03.01},
   url       = {http://press.princeton.edu/titles/7622.html},
+}
+
+@Book{Womack1989,
+  title     = {Improvement and Romance: Constructing the Myth of the Highlands},
+  publisher = {Macmillan},
+  year      = {1989},
+  author    = {Womack, P.},
+  owner     = {Vincent},
+  timestamp = {2019.04.05},
+  url       = {https://www.palgrave.com/fr/book/9781349084968},
 }
 
 @Book{Wood1998,
