--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -938,7 +938,7 @@
 }
 
 @Article{Barabasi1999,
-  author    = {Barab{\'a}si, A.-L. and Albert, R.},
+  author    = {Barabási, A.-L. and Albert, R.},
   title     = {Emergence of scaling in random networks},
   journal   = {Science},
   year      = {1999},
@@ -2185,6 +2185,18 @@
   timestamp = {2010.10.04},
 }
 
+@Article{CamachoCollados2018,
+  author    = {Camacho-Collados, J. and Pilehvar, M. T.},
+  title     = {From Word To Sense Embeddings: A Survey on Vector Representations of Meaning},
+  journal   = {Journal of Artificial Intelligence Research},
+  year      = {2018},
+  volume    = {63},
+  pages     = {743-788},
+  doi       = {10.1613/jair.1.11259},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Camp2011,
   author    = {van de Camp, M. and van den Bosch, A.},
   title     = {A link to the past: constructing historical social networks},
@@ -3024,6 +3036,19 @@
   doi       = {10.1093/applin/ams045},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@Article{Cui2019,
+  author    = {Cui, P. and Wang, X. and Pei, J. and Zhu, W.},
+  title     = {A Survey on Network Embedding},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2019},
+  volume    = {31},
+  number    = {6},
+  pages     = {833-852},
+  doi       = {10.1109/TKDE.2018.2849727},
+  owner     = {Vincent},
+  timestamp = {2019.03.15},
 }
 
 @Electronic{Cukier2013,
@@ -4734,6 +4759,19 @@
   timestamp = {2019.04.06},
 }
 
+@Article{Gallese1998,
+  author    = {Gallese, V.},
+  title     = {Mirror neurons and the simulation theory of mind-reading},
+  journal   = {Trends in Cognitive Sciences},
+  year      = {1998},
+  volume    = {2},
+  number    = {12},
+  pages     = {493-501},
+  doi       = {10.1016/s1364-6613(98)01262-5},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Article{Gansner2000,
   author    = {Gansner, E. R. and North, S. C.},
   title     = {An open graph visualization system and its applications to software engineering},
@@ -5216,6 +5254,18 @@
   doi       = {10.1086/225469},
   owner     = {Vincent},
   timestamp = {2012.07.25},
+}
+
+@Article{Granovetter1983,
+  author    = {Granovetter, M.},
+  title     = {The Strength of Weak Ties: A Network Theory Revisited},
+  journal   = {Sociological Theory},
+  year      = {1983},
+  volume    = {1},
+  pages     = {201},
+  doi       = {10.2307/202051},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Granroth-Wilding2016,
@@ -6880,6 +6930,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Book{Klien2002,
+  title     = {Ecological Dynamics on Yellowstone's Northern Range},
+  publisher = {National Academy Press},
+  year      = {2002},
+  author    = {Klien, D. R. and McCullough, D. R. and Allen-Diaz, B. H. and Cheville, N. F. and Graham, R. W. and Gross, J. E. and MacMahon, J. A. and Mathews, N. E. and Patten, D. T. and Ralls, K. and Turner, M. G. And Williams, E. S.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://www.nap.edu/catalog/10328/ecological-dynamics-on-yellowstones-northern-range},
+}
+
 @Book{Knoke1982,
   title     = {Network Analysis},
   publisher = {Sage},
@@ -7856,6 +7916,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.26},
 }
 
+@Article{LimaeSilva2004,
+  author    = {de Lima e Silva, D. and Medeiros Soares, M. and Henriques, M. V. C. and Schivani, M. T. Alves and de Aguiar, S. G. and de Carvalho, T. P. and Corso, G. and Lucena, L. S.},
+  title     = {The complex network of the Brazilian Popular Music},
+  journal   = {Physica A},
+  year      = {2004},
+  volume    = {332},
+  pages     = {559-565},
+  doi       = {10.1016/j.physa.2003.09.059},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Limungkura2016,
   author    = {Limungkura, T. and Vateekul, P.},
   title     = {Enhance accuracy of partition-based overlapping clustering by exploiting benefit of distances between clusters},
@@ -8757,6 +8829,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/219717.219748},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Milroy1985,
+  author    = {Milroy, J. and Milroy, L.},
+  title     = {Linguistic change, social network and speaker innovation},
+  journal   = {Journal of Linguistics},
+  year      = {1985},
+  volume    = {21},
+  number    = {02},
+  pages     = {339},
+  doi       = {10.1017/s0022226700010306},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Min2016,
@@ -10211,6 +10296,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {33-41},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Paine1969,
+  author    = {Paine, R. T.},
+  title     = {A Note on Trophic Complexity and Community Stability},
+  journal   = {American Naturalist},
+  year      = {1969},
+  volume    = {103},
+  number    = {929},
+  pages     = {91-93},
+  doi       = {10.1086/282586},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Pal2016,
@@ -12365,6 +12463,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2015.11.19},
+}
+
+@Article{Stiller2007,
+  author    = {Stiller, J. and Dunbar, R. I. M.},
+  title     = {Perspective-taking and memory capacity predict social network size},
+  journal   = {Social Networks},
+  year      = {2007},
+  volume    = {29},
+  number    = {1},
+  pages     = {93-104},
+  doi       = {10.1016/j.socnet.2006.04.001},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Electronic{Stoltzman2016,
