--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -169,6 +169,16 @@
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Agichtein2000,
+  author    = {Agichtein, E. and Gravano, L.},
+  title     = {Snowball: extracting relations from large plain-text collections},
+  booktitle = {5th ACM conference on Digital libraries},
+  year      = {2000},
+  doi       = {10.1145/336597.336644},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Article{Ahmadizadeh2017,
   author        = {Ahmadizadeh, S. and Shames, I. and Martin, S. and Nešić, D.},
   title         = {On Eigenvalues of Laplacian matrix for a class of directed signed graphs},
@@ -335,6 +345,29 @@
   url          = {https://thelittledataset.com/2015/01/20/the-one-with-all-the-quantifiable-friendships/},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@InProceedings{Ali2007,
+  author    = {Ali, S. and Basharat, A. and Shah, M.},
+  title     = {Chaotic Invariants for Human Action Recognition},
+  booktitle = {11th IEEE International Conference on Computer Vision},
+  year      = {2007},
+  doi       = {10.1109/iccv.2007.4409046},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@Article{Alon2009,
+  author    = {Alon, J. and Athitsos, V. and Yuan, Q. and Sclaroff, S.},
+  title     = {A Unified Framework for Gesture Recognition and Spatiotemporal Gesture Segmentation},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2009},
+  volume    = {31},
+  number    = {9},
+  pages     = {1685-1699},
+  doi       = {10.1109/tpami.2008.203},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Amancio2012,
@@ -878,6 +911,33 @@
   url       = {https://www.routledge.com/Blueprint-for-Screenwriting-A-Complete-Writers-Guide-to-Story-Structure/Ballon/p/book/9780805849233},
 }
 
+@InProceedings{Bamman2006,
+  author    = {Bamman, D. and Crane, G.},
+  title     = {The Design and Use of a Latin Dependency Treebank},
+  booktitle = {5th Workshop on Treebanks and Linguistic Theories},
+  year      = {2006},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@InProceedings{Bamman2007,
+  author    = {Bamman, D. and Passarotti, M. and Crane, G. and Raynaud, S.},
+  title     = {A Collaborative Model of Treebank Development},
+  booktitle = {6th International Workshop on Treebanks and Linguistic Theories},
+  year      = {2007},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@InProceedings{Bamman2009,
+  author    = {Bamman, D. and Mambrini, F. and Crane, G.},
+  title     = {An Ownership Model of Annotation: The Ancient Greek Dependency Treebank},
+  booktitle = {8th International Workshop on Treebanks and Linguistic Theories},
+  year      = {2009},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Bamman2014,
   author    = {Bamman, D. and O'Connor, B. and Smith, N. A.},
   title     = {Learning latent personas of film characters},
@@ -1328,6 +1388,15 @@
   timestamp = {2012.07.30},
 }
 
+@Book{Biber1988,
+  title     = {Variation Across Speech and Writing},
+  publisher = {Cambridge University Press},
+  year      = {1988},
+  author    = {Biber, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Article{Biber1992,
   author    = {Biber, D.},
   title     = {The Multi-Dimensional Approach to Linguistic Analyses of Genre Variation: An Overview of Methodology and Findings},
@@ -1339,6 +1408,33 @@
   owner     = {Vincent},
   timestamp = {2019.03.28},
   url       = {https://www.jstor.org/stable/30204629},
+}
+
+@Book{Biber1995,
+  title     = {Dimensions of Register Variation: A Cross-Linguistic Comparison},
+  publisher = {Cambridge University Press},
+  year      = {1995},
+  author    = {Biber, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@Book{Biber1998,
+  title     = {Corpus Linguistics : Investigating Language Structure and Use},
+  publisher = {Cambridge University Press},
+  year      = {1998},
+  author    = {Biber, D. and Conrad, S. and Reppen, R.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@Book{Biber2007,
+  title     = {Discourse on the Move: Using Corpus Analysis to Describe Discourse Structure},
+  publisher = {John Benjamins},
+  year      = {2007},
+  author    = {Biber, D. and Connor, U. and Upton, T. A.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Biddle1986,
@@ -1614,6 +1710,16 @@
   url       = {http://aclweb.org/anthology/W07-0901},
 }
 
+@InProceedings{Borin2009,
+  author    = {Borin, L. and Dannélls, D. and Forsberg, M. and Gronostaj, M. T. and Kokkinakis, D.},
+  title     = {Thinking Green: Toward Swedish FrameNet++},
+  booktitle = {FrameNet Masterclass and Workshop},
+  year      = {2009},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/301_Paper.pdf},
+}
+
 @InCollection{Borin2010,
   author    = {Borin, L. and Kokkinakis, D.},
   title     = {Literary Onomastics and Language Technology},
@@ -1624,6 +1730,15 @@
   doi       = {10.4018/978-1-60566-932-8.ch003},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@InProceedings{Borin2010a,
+  author    = {Borin, L. and Forsberg, M.},
+  title     = {Beyond the synset: Swesaurus - a fuzzy Swedish wordnet},
+  booktitle = {Symposium Re-thinking synonymy: semantic sameness and similarity in languages and their description},
+  year      = {2010},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Bornet2017,
@@ -2077,6 +2192,15 @@
   timestamp = {2019.03.28},
 }
 
+@Book{Burrows1987a,
+  title     = {Computation Into Criticism: A Study of Jane Austen's Novels and An Experiment in Method},
+  publisher = {Oxford University Press},
+  year      = {1987},
+  author    = {Burrows, J. F.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Book{Burrows2004,
   title     = {Textual Analysis},
   publisher = {Blackwell Publishing},
@@ -2160,6 +2284,19 @@
   doi       = {10.1016/s0957-4174(03)00063-0},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Caelli2004,
+  author    = {Caelli, T. and Kosinov, S.},
+  title     = {An eigenspace projection clustering method for inexact graph matching},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2004},
+  volume    = {26},
+  number    = {4},
+  pages     = {515-519},
+  doi       = {10.1109/tpami.2004.1265866},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Book{Callaghan2003,
@@ -2524,7 +2661,28 @@
   timestamp = {2019.03.28},
 }
 
-@Article{Chen2009,
+@PhdThesis{Chen2007,
+  author    = {Chen, J.},
+  title     = {Automatic relation extraction among named entities from text contents},
+  school    = {University of Singapore},
+  year      = {2007},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@InProceedings{Chen2009,
+  author    = {Chen, J. and Zaïane, O. R. and Goebel, R.},
+  title     = {Detecting Communities in Social Networks using Max-Min Modularity},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2009},
+  pages     = {978-989},
+  doi       = {10.1137/1.9781611972795.84},
+  owner     = {Vincent},
+  timestamp = {2012.05.21},
+}
+
+@Article{Chen2009a,
   author    = {Chen, B.-W. and Wang, J.-C. and Wang, J.-F.},
   title     = {A Novel Video Summarization Based on Mining the Story-Structure and Semantic Relations Among Concept Entities},
   journal   = {IEEE Transactions on Multimedia},
@@ -2682,6 +2840,17 @@
   doi       = {10.1109/TBDATA.2016.2628725},
   owner     = {Vincent},
   timestamp = {2016.12.02},
+}
+
+@InProceedings{Christensen2010,
+  author    = {Christensen, J. and {Mausam} and Soderland, S. and Etzioni, O.},
+  title     = {Semantic role labeling for open information extraction},
+  booktitle = {NAACL HLT First International Workshop on Formalisms and Methodology for Learning by Reading},
+  year      = {2010},
+  pages     = {52-60},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://dl.acm.org/citation.cfm?id=1866782},
 }
 
 @Article{Chu2005,
@@ -2935,6 +3104,15 @@
   url       = {https://www.wiley.com/en-ag/Practical+Nonparametric+Statistics,+3rd+Edition-p-9780471160687},
 }
 
+@Book{Conrad2001,
+  title     = {Variation in English: Multi-Dimensional Studies},
+  publisher = {Longman},
+  year      = {2001},
+  author    = {Conrad, S. and Biber, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Consolvo2005,
   author    = {Consolvo, S. and Smith, I. E. and Matthews, T. and LaMarca, A. and Tabert, J. and Powledge, P.},
   title     = {Location disclosure to social relations: why, when, \& what people want to share},
@@ -3015,6 +3193,16 @@
   timestamp = {2019.03.29},
 }
 
+@InProceedings{Cristinacce2006,
+  author    = {Cristinacce, D. and Cootes, T. F.},
+  title     = {Feature Detection and Tracking with Constrained Local Models},
+  booktitle = {17th British Machine Vision Conference},
+  year      = {2006},
+  pages     = {929-938},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Book{Csermely2006,
   title     = {Weak Links - Stabilizers of Complex Systems from Proteins to Social Networks},
   publisher = {Springer},
@@ -3082,6 +3270,19 @@
   doi       = {10.1017/cbo9780511576461},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@Article{Czar2007,
+  author    = {Cózar, J. R. and Guil, N. and González-Linares, J. M. and Zapata, E. L. and Izquierdo, E.},
+  title     = {Logotype detection to support semantic-based video annotation},
+  journal   = {Signal Processing: Image Communication},
+  year      = {2007},
+  volume    = {22},
+  number    = {7-8},
+  pages     = {669-679},
+  doi       = {10.1016/j.image.2007.05.006},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @TechReport{Dahn2015,
@@ -3656,6 +3857,19 @@
   timestamp = {2017.05.05},
 }
 
+@Article{Dorogovtsev2001a,
+  author    = {Dorogovtsev, S. N. and Mendes, J. F. F.},
+  title     = {Language as an evolving Word Web},
+  journal   = {Proceedings of the Royal Society of London Series B},
+  year      = {2001},
+  volume    = {268},
+  number    = {1485},
+  pages     = {2603-2606},
+  doi       = {10.1098/rspb.2001.1824},
+  owner     = {Vincent},
+  timestamp = {2010.12.18},
+}
+
 @Article{Dorogovtsev2002a,
   author    = {Dorogovtsev, S. N. and Goltsev, A. V. and Mendes, J. F. F.},
   title     = {Pseudofractal scale-free web},
@@ -4024,6 +4238,16 @@
   timestamp = {2019.04.01},
 }
 
+@InProceedings{Efros2003,
+  author    = {{Efros} and {Berg} and {Mori} and {Malik}},
+  title     = {Recognizing action at a distance},
+  booktitle = {9th IEEE International Conference on Computer Vision},
+  year      = {2003},
+  doi       = {10.1109/iccv.2003.1238420},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @PhdThesis{Ehrmann2008,
   author    = {Ehrmann, M.},
   title     = {Les entités nommées, de la linguistique au TAL : statut théorique et méthodes de désambiguïsation},
@@ -4103,6 +4327,15 @@
   owner     = {Vincent},
   timestamp = {2017.12.03},
   url       = {https://ocs.aaai.org/Papers/Symposia/Spring/2009/SS-09-06/SS09-06-006.pdf},
+}
+
+@InProceedings{Elson2009a,
+  author    = {Elson, D. K. and McKeown, K. R.},
+  title     = {A Tool for Deep Semantic Encoding of Narrative Texts},
+  booktitle = {ACL-IJCNLP Software Demonstrations},
+  year      = {2009},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Elson2010,
@@ -4302,9 +4535,19 @@
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Fathi2008,
+  author    = {Fathi, A. and Mori, G.},
+  title     = {Action recognition by learning mid-level motion features},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2008},
+  doi       = {10.1109/cvpr.2008.4587735},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Fekete2000,
   author    = {Fekete, J.-D. and Dufournaud, N.},
-  title     = {Compus},
+  title     = {Compus: visualization and analysis of structured documents for understanding social life in the 16th century},
   booktitle = {5th ACM conference on Digital libraries},
   year      = {2000},
   pages     = {47-55},
@@ -4424,6 +4667,16 @@
   owner     = {Vincent},
   timestamp = {2019.03.31},
   url       = {https://dl.acm.org/citation.cfm?id=649301},
+}
+
+@InProceedings{Fleischman2002,
+  author    = {Fleischman, M. and Hovy, E.},
+  title     = {Fine grained classification of named entities},
+  booktitle = {19th international conference on Computational linguistics},
+  year      = {2002},
+  doi       = {10.3115/1072228.1072358},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Book{Flower1947,
@@ -4952,6 +5205,18 @@
   owner     = {Vincent},
   timestamp = {2019.03.28},
   url       = {https://www.pearson.com/us/higher-education/product/Giannetti-Understanding-Movies-13th-Edition/9780205856169.html},
+}
+
+@Article{Giles2008,
+  author    = {Giles, C. B. and Wren, J. D},
+  title     = {Large-scale directional relationship extraction and resolution},
+  journal   = {BMC Bioinformatics},
+  year      = {2008},
+  volume    = {9},
+  number    = {S9},
+  doi       = {10.1186/1471-2105-9-s9-s11},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Gillespie2015,
@@ -5624,6 +5889,16 @@
   author    = {Harris, J. G.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@InProceedings{Hasegawa2004,
+  author    = {Hasegawa, T. and Sekine, S. and Grishman, R.},
+  title     = {Discovering relations among named entities from large corpora},
+  booktitle = {42nd Annual Meeting on Association for Computational Linguistics},
+  year      = {2004},
+  doi       = {10.3115/1218955.1219008},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Hassan2012,
@@ -6409,6 +6684,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.04},
 }
 
+@InProceedings{Jiang2007,
+  author    = {Jiang, H. and Fels, S. and Little, J. J.},
+  title     = {A Linear Programming Approach for Multiple Object Tracking},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2007},
+  doi       = {10.1109/cvpr.2007.383180},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Jing2007,
   author    = {Jing, H. and Kambhatla, N. and Roukos, S.},
   title     = {Extracting Social Networks and Biographical Facts From Conversational Speech Transcripts},
@@ -6969,6 +7254,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@InProceedings{Kokkinakis2004,
+  author    = {Kokkinakis, D.},
+  title     = {Reducing the Effect of Name Explosion.},
+  booktitle = {LREC Workshop},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Kokkinakis2011,
   author    = {Kokkinakis, D. and Malm, M.},
   title     = {Character Profiling in 19th Century Fiction},
@@ -7351,6 +7645,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://m.armand-colin.com/la-science-fiction-9782200269210},
 }
 
+@InProceedings{Laptev2003,
+  author    = {{Laptev} and {Lindeberg}},
+  title     = {Space-time interest points},
+  booktitle = {9th IEEE International Conference on Computer Vision},
+  year      = {2003},
+  doi       = {10.1109/iccv.2003.1238378},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Laptev2008,
   author    = {Laptev, I. and Marszalek, M. and Schmid, C. and Rozenfeld, B.},
   title     = {Learning realistic human actions from movies},
@@ -7539,6 +7843,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {472-479},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Lee2010,
+  author    = {Lee, J. and Haug, D.},
+  title     = {Porting An Ancient Greek and Latin Treebank},
+  booktitle = {7th conference on International Language Resources and Evaluation},
+  year      = {2010},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Lee2012f,
@@ -7951,6 +8264,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InCollection{Lin2009a,
+  author    = {Lin, J. and Wang, W.},
+  title     = {Weakly-Supervised Violence Detection in Movies with Audio and Video Based Co-training},
+  booktitle = {Advances in Multimedia Information Processing},
+  publisher = {Springer},
+  year      = {2009},
+  pages     = {930-935},
+  doi       = {10.1007/978-3-642-10467-1_84},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Electronic{Lind2012,
   author       = {Lind, B.},
   month        = {04},
@@ -8049,6 +8374,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1186/s40649-014-0001-4},
   owner     = {Vincent},
   timestamp = {2014.10.22},
+}
+
+@InProceedings{Lucas1981,
+  author    = {Lucas, B. D. and Kanade, T.},
+  title     = {An iterative image registration technique with an application to stereo vision},
+  booktitle = {7th international joint conference on Artificial intelligence},
+  year      = {1981},
+  pages     = {674-679},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://dl.acm.org/citation.cfm?id=1623264.1623280},
 }
 
 @Article{Luce1949,
@@ -8233,6 +8569,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.04},
   url       = {https://ora.ox.ac.uk/objects/uuid:43275d59-4db2-49db-b26a-96f21378cfa8},
+}
+
+@Book{Mackie1996,
+  title     = {Talking Trojan: Speech and Community in the Iliad},
+  publisher = {Rowman \& Littlefield},
+  year      = {1996},
+  author    = {Mackie, H. S.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Mademlis2016,
@@ -8831,6 +9176,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@InProceedings{Miller2009,
+  author    = {Miller, K. T. and Griffiths, T. L. and Jordan, M. I.},
+  title     = {Nonparametric latent feature models for link prediction},
+  booktitle = {22nd International Conference on Neural Information Processing Systems},
+  year      = {2009},
+  pages     = {1276-1284},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://dl.acm.org/citation.cfm?id=2984237},
+}
+
 @Article{Milroy1985,
   author    = {Milroy, J. and Milroy, L.},
   title     = {Linguistic change, social network and speaker innovation},
@@ -8880,6 +9236,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.17210/hcik.2016.01.100},
   owner     = {Vincent},
   timestamp = {2016.07.06},
+}
+
+@TechReport{Minka2000,
+  author      = {Minka, T.},
+  title       = {Estimating a dirichlet distribution},
+  institution = {Massachusetts Institute of Technology},
+  year        = {2000},
+  owner       = {Vincent},
+  timestamp   = {2019.04.08},
 }
 
 @Article{Miranda2013,
@@ -9104,6 +9469,27 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2016.03.01},
   url       = {http://www.versobooks.com/books/261-graphs-maps-trees},
+}
+
+@Book{Moretti2006,
+  title     = {The Novel Princeton University Press, 2006.},
+  publisher = {Princeton University Press},
+  year      = {2006},
+  author    = {Moretti, F.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
+@Article{Moretti2009,
+  author    = {Moretti, F.},
+  title     = {Style, Inc. Reflections on Seven Thousand Titles (British Novels, 1740-1850)},
+  journal   = {Critical Inquiry},
+  year      = {2009},
+  volume    = {36},
+  number    = {1},
+  pages     = {134-158},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Moretti2011a,
@@ -9515,6 +9901,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2019.03.23},
   url         = {https://pdfs.semanticscholar.org/c099/a6dc8b9f731bbc9a29a920233257c13d9b00.pdf},
+}
+
+@Article{Newman1999a,
+  author    = {Newman, M. E. J. and Watts, D. J.},
+  title     = {Renormalization group analysis of the small-world network model},
+  journal   = {Physics Letters A},
+  year      = {1999},
+  volume    = {263},
+  number    = {4-6},
+  pages     = {341-346},
+  doi       = {10.1016/S0375-9601(99)00757-4},
+  owner     = {Vincent},
+  timestamp = {2010.10.04},
 }
 
 @Article{Newman2001,
@@ -10219,6 +10618,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {https://books.google.fr/books/about/Early_Irish_History_and_Mythology.html?id=k13YAAAAMAAJ&redir_esc=y},
+}
+
+@InProceedings{Orsan2001,
+  author    = {Orǎsan, C. and Evans, R.},
+  title     = {Learning to identify animate references},
+  booktitle = {Workshop on Computational Natural Language Learning},
+  year      = {2001},
+  doi       = {10.3115/1117822.1117834},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Ortuo2002,
@@ -10963,9 +11372,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Scene detection in hollywood movies and tv shows},
   booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
   year      = {2003},
+  doi       = {10.1109/CVPR.2003.1211489},
   owner     = {Vincent},
   timestamp = {2019.03.22},
-  url       = {10.1109/CVPR.2003.1211489},
 }
 
 @Article{Rasheed2005,
@@ -11077,6 +11486,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.84.7524&rep=rep1&type=pdf#page=141},
+}
+
+@Book{Reppen2002,
+  title     = {Using Corpora to Explore Linguistic Variation},
+  publisher = {J. Benjamins},
+  year      = {2002},
+  author    = {Reppen, R. and Fitzmaurice, S. and Biber, D.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://benjamins.com/catalog/scl.9},
 }
 
 @Article{Reynolds2005,
@@ -11326,6 +11745,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Riloff1996,
+  author    = {Riloff, E.},
+  title     = {Automatically generating extraction patterns from untagged text},
+  booktitle = {13th national conference on Artificial intelligence},
+  year      = {1996},
+  pages     = {1044-1049},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Electronic{Rinehart2017,
   author       = {Rinehart, N.},
   year         = {2017},
@@ -11349,6 +11778,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1089/109493102321018222},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Roberts2008,
+  author    = {Roberts, A. and Gaizauskas, R. and Hepple, M.},
+  title     = {Extracting clinical relationships from patient narratives},
+  booktitle = {Workshop on Current Trends in Biomedical Natural Language Processing},
+  year      = {2008},
+  pages     = {10-18},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Robson2016,
@@ -11466,6 +11905,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Rosario2004,
+  author    = {Rosario, B. and Hearst, M. A.},
+  title     = {Classifying semantic relations in bioscience texts},
+  booktitle = {42nd Annual Meeting on Association for Computational Linguistics},
+  year      = {2004},
+  doi       = {10.3115/1218955.1219010},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{RosenZvi2004,
   author    = {Rosen-Zvi, M. and Griffiths, T. and Steyvers, M. and Smyth, P.},
   title     = {The author-topic model for authors and documents},
@@ -11552,6 +12001,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{Ruhnau2000,
+  author    = {Ruhnau, B.},
+  title     = {Eigenvector-centrality - a node-centrality?},
+  journal   = {Social Networks},
+  year      = {2000},
+  volume    = {22},
+  number    = {4},
+  pages     = {357-365},
+  doi       = {10.1016/s0378-8733(00)00031-9},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Article{Rui1999,
   author    = {Rui, Y. and Huang, T. S. and Mehrotra, S.},
   title     = {Constructing table-of-content for videos},
@@ -11564,6 +12026,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {General},
   owner     = {Vincent},
   timestamp = {2018.04.27},
+}
+
+@Book{Russell2002,
+  title     = {Romantic Sociability : Social Networks and Literary Culture in Britain, 1770-1840},
+  publisher = {Cambridge University Press},
+  year      = {2002},
+  author    = {Russell, G. and Tuite, C.},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Electronic{Ruths2016,
@@ -11636,6 +12107,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2015.10.03},
   url       = {https://letterpress.uchicago.edu/index.php/jdhcs/article/view/86},
+}
+
+@Article{Rydberg-Cox2002,
+  author    = {Rydberg-Cox, J. A.},
+  title     = {Keyword Extraction From Ancient Greek Literary Texts},
+  journal   = {Literary and Linguistic Computing},
+  year      = {2002},
+  volume    = {17},
+  number    = {2},
+  pages     = {231-244},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Sabidussi1966,
@@ -11785,6 +12268,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.05.24},
 }
 
+@Article{Sarkar2005,
+  author    = {Sarkar, P. and Moore, A. W.},
+  title     = {Dynamic social network analysis using latent space models},
+  journal   = {ACM SIGKDD Explorations Newsletter},
+  year      = {2005},
+  volume    = {7},
+  number    = {2},
+  pages     = {31-40},
+  doi       = {10.1145/1117454.1117459},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @InProceedings{Sarmento2009,
   author    = {Sarmento, L. and Nunes, S.},
   title     = {Automatic extraction of quotes and topics from news feeds},
@@ -11929,6 +12425,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.12.24},
 }
 
+@InProceedings{Sekine2004,
+  author    = {Sekine, S.},
+  title     = {Definition, Dictionaries and Tagger for Extended Named Entity Hierarchy},
+  booktitle = {4th International Conference on Language Resources and Evaluation},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {http://www.lrec-conf.org/proceedings/lrec2004/pdf/65.pdf},
+}
+
 @Article{Selisker2015,
   author    = {Selisker, S.},
   title     = {The Bechdel Test and the Social Form of Character Networks},
@@ -11941,6 +12447,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   issue     = {3},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Article{Seo2002,
+  author    = {Seo, J. and Shneiderman, B.},
+  title     = {Interactively exploring hierarchical clustering results [gene identification]},
+  journal   = {Computer},
+  year      = {2002},
+  volume    = {35},
+  number    = {7},
+  pages     = {80-86},
+  doi       = {10.1109/mc.2002.1016905},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Seo2013,
@@ -11965,6 +12484,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Article{Sethuraman1994,
+  author    = {Sethuraman, J.},
+  title     = {A constructive definition of dirichlet priors},
+  journal   = {Statistica Sinica},
+  year      = {1994},
+  volume    = {4},
+  pages     = {639-650},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://www.jstor.org/stable/24305538},
 }
 
 @InProceedings{Shah2015,
@@ -12277,6 +12808,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Sol2010,
+  author    = {Solé, R. V. and Corominas-Murtra, B. and Valverde, S. and Steels, L.},
+  title     = {Language networks: Their structure, function, and evolution},
+  journal   = {Complexity},
+  year      = {2010},
+  volume    = {15},
+  number    = {6},
+  pages     = {20-26},
+  doi       = {10.1002/cplx.20305},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+}
+
 @Article{Sola2013,
   author    = {Solá, L. and Romance, M. and Criado, R. and Flores, J. and García del Amo, A. and Boccaletti, S.},
   title     = {Eigenvector centrality of nodes in multiplex networks},
@@ -12287,6 +12831,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1063/1.4818544},
   owner     = {Vincent},
   timestamp = {2015.07.06},
+}
+
+@InCollection{Sole2003,
+  author    = {Solé, R. V. and Pastor-Satorras, R.},
+  title     = {Complex networks in genomics and proteomics},
+  booktitle = {Handbook of Graphs and Networks: From the Genome to the Internet},
+  publisher = {Wiley-VCH},
+  year      = {2003},
+  chapter   = {7},
+  pages     = {145-167},
+  doi       = {10.1002/3527602755.ch7},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @InProceedings{Soleymani2008,
@@ -12866,6 +13423,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Taskar2003,
+  author    = {Taskar, B. and Wong, M.-F. and Abbeel, P. and Koller, D.},
+  title     = {Link prediction in relational data},
+  booktitle = {16th International Conference on Neural Information Processing Systems},
+  year      = {2003},
+  pages     = {659-666},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
+  url       = {https://dl.acm.org/citation.cfm?id=2981428},
+}
+
 @InProceedings{Taskiran2006,
   author    = {Taskiran, C. M.},
   title     = {Evaluation of automatic video summarization systems},
@@ -13147,7 +13715,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Truong2007,
   author    = {Truong, B. T. and Venkatesh, S.},
-  title     = {Video abstraction},
+  title     = {Video abstraction: A systematic review and classification},
   journal   = {ACM Transactions on Multimedia Computing, Communications, and Applications},
   year      = {2007},
   volume    = {3},
@@ -13482,6 +14050,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1291233.1291287},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Vinciarelli2007b,
+  author    = {Vinciarelli, A.},
+  title     = {Speakers Role Recognition in Multiparty Audio Recordings Using Social Network Analysis and Duration Distribution Modeling},
+  journal   = {IEEE Transactions on Multimedia},
+  year      = {2007},
+  volume    = {9},
+  number    = {6},
+  pages     = {1215-1226},
+  doi       = {10.1109/tmm.2007.902882},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @InProceedings{Vinciarelli2008,
@@ -14168,6 +14749,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://github.com/maladesimaginaires/intnetviz/raw/master/DH2016_xanthos_et_al.pdf},
 }
 
+@InProceedings{Xiang2010,
+  author    = {Xiang, R. and Neville, J. and Rogati, M.},
+  title     = {Modeling relationship strength in online social networks},
+  booktitle = {19th International conference on World wide web},
+  year      = {2010},
+  doi       = {10.1145/1772690.1772790},
+  owner     = {Vincent},
+  timestamp = {2011.07.19},
+}
+
 @Article{XingquanZhu2005,
   author    = {Zhu, X. and Elmagarmid, A. K. and Xue, X. and Wu, L. and Catlin, A. C.},
   title     = {{InsightVideo}: toward hierarchical video content organization for efficient browsing, summarization and retrieval},
@@ -14549,7 +15140,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Zhang1995,
   author    = {Zhang, H. J. and Low, C. Y. and Smoliar, S. W. and Wu, J. H.},
-  title     = {Video parsing, retrieval and browsing},
+  title     = {Video parsing, retrieval and browsing: an integrated and content-based solution},
   booktitle = {3rd ACM international conference on Multimedia},
   year      = {1995},
   pages     = {15-24},
@@ -14676,6 +15267,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.jbi.2011.08.006},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@InProceedings{ZhengdongLu2008,
+  author    = {Lu, Z. and Carreira-Perpinan, M. A.},
+  title     = {Constrained spectral clustering through affinity propagation},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2008},
+  doi       = {10.1109/cvpr.2008.4587451},
+  owner     = {Vincent},
+  timestamp = {2019.04.08},
 }
 
 @Article{Zhou2004a,
